<resources>
    <string name="app_name">新零售</string>
    <string name="app_name_debug">新零售_d</string>
    <string name="app_name_show">新零售_s</string>
    <string name="app_name_test">新零售_t</string>
    <string name="copyright">苏州穿山甲机器人股份有限公司</string>
    <string name="tips">Tips: 可以跟我语音聊天或者点击屏幕按钮互动哦~</string>
    <string name="click_buy">点击抢购</string>
    <string name="eat_price">吃货价：</string>
    <string name="delete">删除</string>
    <string name="calc">结算</string>
    <string name="select_all">全选</string>
    <string name="hint">提示</string>
    <string name="delete_sure">确认删除？</string>
    <string name="sure">确定</string>
    <string name="cancel">取消</string>
    <string name="order_generating">订单生成中…</string>
    <string name="pay_success">支付成功</string>
    <string name="cancel_order">取消订单</string>
    <string name="continue_pay">继续支付</string>
    <string name="back_continue_shop">返回继续购物</string>
    <string name="product_price">价格:</string>
    <string name="product_describe">描述:</string>
    <string name="one">咨询页面</string>
    <string name="customer_service">客服</string>
    <string name="settings">设置</string>
    <string name="language_text">中文</string>
    <string name="delic_food">美食</string>
    <string name="scenic">景点</string>
    <string name="hotel">酒店</string>
    <string name="relax">休闲娱乐</string>
    <string name="share_bike">共享单车</string>
    <string name="supermarket">超市</string>
    <string name="atm">ATM</string>
    <string name="wc">厕所</string>
    <string name="fast_hotel">快捷酒店</string>
    <string name="cyber_bar">网吧</string>
    <string name="underground">地铁</string>
    <string name="flower_shop">花店</string>
    <string name="selled_service">售后服务</string>
    <string name="about_vip">关于会员</string>
    <string name="price_low">优惠服务</string>
    <string name="helper_center">帮助中心</string>
    <string name="join_servcie">加盟服务</string>
    <string name="version">系统版本：</string>
    <string name="init_factory">是否恢复出厂设置：</string>
    <string name="map_path_planning">路径规划成功！</string>
    <string name="no_results">抱歉，未找到结果</string>
    <string name="no_address_wrong">抱歉，起终点或途经点地址错误有岐义</string>
    <string name="product_detail_operation_speek">请问是加入购物车还是立即购买？请说出您要的操作。</string>
    <string name="product_original_price">原价：</string>
    <string name="product_current_price">现价：</string>
    <string name="product_sell_num">已售出：</string>
    <string name="product_no_choose">您还没有选择宝贝哦！</string>
    <string name="shopcart_selected_product">已选商品</string>
    <string name="shopcart_total_price">合计（不含运费）：</string>
    <string name="shopcart_product_item">件</string>
    <string name="shopcart_not_reduce_product">受不了了，宝贝不能再少了！</string>
    <string name="shopcart_not_more_product">亲，该宝贝不能购买更多喽！</string>
    <string name="shopcart_you_choose">您选择了</string>
    <string name="shopcart_total_RMB">总计人民币</string>
    <string name="yuan">￥</string>
    <string name="have">有</string>
    <string name="is_confirm_payment">如果确认支付，请说</string>
    <string name="confirm_payment">确认支付</string>
    <string name="if_need_modify">如需修改，请在界面上操作修改。</string>
    <string name="box">盒</string>
    <string name="order_native_payment">支持支付宝、微信扫码付款。</string>
    <string name="order_not_native_payment">如需其他付款方式请选择打印订单到收银台付款。</string>
    <string name="order_generation">订单生成</string>
    <string name="order_success">支付成功</string>
    <string name="order_fail">支付失败</string>
    <string name="order_cancel">取消订单</string>
    <string name="setting_voice">声音设置</string>
    <string name="setting_exceed_speed">已超过安全速度,是否继续？</string>
    <string name="setting_speed_value">速度(m/s)</string>
    <string name="save">保存</string>
    <string name="setting_speed">速度设置</string>
    <string name="setting_about_robot_version">机器人信息版本</string>
    <string name="setting_about_model">型号</string>
    <string name="setting_about_memory">运行内存</string>
    <string name="setting_about_version">UI版本</string>
    <string name="setting_about_service_version">服务版本</string>
    <string name="setting_about_copyright">版权</string>
    <string name="setting_about">关于BOT</string>
    <string name="commution">通信中</string>
    <string name="click_again">再点击</string>
    <string name="enter_into_sn_view">次可进入 SN 获取界面</string>
    <string name="get_device_info">获取设备信息中…</string>
    <string name="about_us">这是一个关于我们的界面</string>
    <string name="charge_administration">充电管理</string>
    <string name="immediately_charge">立刻充电</string>
    <string name="charge_too_ittle">电量不能再少了！</string>
    <string name="charge_too_much">电量不能再多了！</string>
    <string name="charge_residue">充电余量 :</string>
    <string name="update_prompt">更新信息介绍： 1.解决了闪退Bug 2.修复产品列表滑动不畅问题</string>
    <string name="updata">更新</string>
    <string name="check_update">检查更新</string>
    <string name="print">打印</string>
    <string name="init_factory_hint">恢复出厂设置后当前所有数据将被清空 无法还原请谨慎使用此功能！</string>
    <string name="enter_name">请输入姓名</string>
    <string name="tel_number">请输入手机号</string>
    <string name="register">注册</string>
    <string name="save_map">保存地图</string>
    <string name="save_current_place_man">请输入当前地点名称</string>
    <string name="save_current_navigation_point">保存当前导航点</string>
    <string name="navigation_point_configure_map">导航点配置到地图</string>
    <string name="stay">在</string>
    <string name="city">北京</string>
    <string name="find_in_city">市内找</string>
    <string name="search_key">餐厅</string>
    <string name="search">城市内搜索</string>
    <string name="search_nearby">周边搜索</string>
    <string name="search_bound">区域搜索</string>
    <string name="get_sn_status">检测SN获取状态</string>
    <string name="pwn_administration">密码管理</string>
    <string name="enter_landing_code">请输入登录密码</string>
    <string name="recovery">恢复</string>
    <string name="prompt_function">该页面正在建设中…</string>
    <string name="enter_pwd">请输入登录密码</string>
    <string name="land">登录</string>
    <string name="system_setting">系统设置</string>
    <string name="setting_volume">音量设置</string>
    <string name="synchronous_data">同步数据</string>
    <string name="factory_setting">出厂设置</string>
    <string name="about_bot">关于BOT</string>
    <string name="close">关机</string>
    <string name="setting_list">设置列表</string>
    <string name="setting_net">网络设置</string>
    <string name="take_the_num">取号</string>
    <string name="up_sn">上身板SN</string>
    <string name="down_sn">下身板SN</string>
    <string name="upper_computer_sn">上位机SN</string>
    <string name="navigation_board">导航板SN</string>
    <string name="current_version">当前系统版本:</string>
    <string name="discount">优惠券</string>
    <string name="click_to_receive">点击\n领取</string>
    <string name="coupon_use_condition">使用门槛：全场通用</string>
    <string name="coupon_use_time">使用时间：即日起至2017年11月10日</string>
    <string name="product_title">时尚就是时尚</string>
    <string name="original_price">原价:</string>
    <string name="present_price">现价:</string>
    <string name="sold">售出:</string>
    <string name="piece">件</string>
    <string name="add_cart">加入购物车</string>
    <string name="buy_product">购买</string>
    <string name="cart">购物车</string>
    <string name="main">首页</string>
    <string name="back">返回</string>
    <string name="current_pwd">当前密码:</string>
    <string name="enter_old_pwd">请输入旧密码</string>
    <string name="new_pwd">新&#160;&#160;密&#160;&#160;码:</string>
    <string name="enter_new_pwd">请输入新密码</string>
    <string name="repeat_pwd">重复密码:</string>
    <string name="enter_repeat_pwd">请重新输入新密码</string>
    <string name="new_pwd_error">新密码两次输入不同</string>
    <string name="sorry_no_find_result">抱歉，未找到结果</string>
    <string name="synchronous_data_success">同步数据成功！</string>
    <string name="prompt_shutdown">机器人将在五秒后关机!</string>
    <string name="already_latest_version">已经是最新版本</string>
    <string name="down_now">正在下载</string>
    <string name="songs_do_not_exist">歌曲不存在</string>
    <string name="Input_prompt">不能输入特殊字符</string>
    <string name="flash_back_hint">出现闪退了正在把日志保存到sdcard crash目录下</string>
    <string name="check_is_it_available_sdcard">请检查SD卡是否可用</string>
    <string name="satisfied">满意</string>
    <string name="very_satisfied">非常满意</string>
    <string name="dissatisfied">不满意</string>
    <string name="shrinkage_individual">万+</string>
    <string name="buy_intent">结账购买跳转</string>
    <string name="service_evaluation">和您交流非常愉快，能占用您一些时间为我的服务做一个评价吗？</string>
    <string name="net_error">没有数据ing，请检查网络或者到\n设置页面同步一下数据！</string>
    <string name="sim_chinese">简体中文</string>
    <string name="ja_language">日本語</string>
    <string name="gas_station">加油站</string>
    <string name="vip_center">会员中心</string>
    <string name="check">查询</string>
    <string name="fun">娱乐</string>
    <string name="nav">导航</string>
    <string name="local_service">周边服务</string>
    <string name="product">产品</string>
    <string name="Coupon">优惠券</string>
    <string name="about">关于</string>
    <string name="home_page">首页</string>
    <string name="go_back">返回</string>
    <string name="shopping_cart">购物车</string>
    <string name="automatic_charging">自动充电：</string>
    <string name="synch_dedail">同步失败</string>
    <string name="charge_save">充电设置信息已经保存</string>
    <string name="go_charge">正在前往充电点</string>
    <string name="saved_speed">您设置的速度已保存</string>
    <string name="passWord_error">密码错误请重新输入</string>
    <string name="password_less">密码不足6位</string>
    <string name="back_welcome_point">返回迎宾点</string>
    <string name="guide">开始一键导引</string>
    <string name="go_imm">立即前往</string>
    <string name="no_usb">您尚未插入U盘或未正确识别</string>
    <string name="navi_name">导航点名称</string>
    <string name="plz_input_nave_name">请输入导航点名称</string>
    <string name="navi_description">描述:</string>
    <string name="plz_input_navi_description">请输入导航点描述</string>
    <string name="navi_xpoint">X坐标</string>
    <string name="get_point_method">点击获取坐标点或者输入坐标</string>
    <string name="navi_ypoint">Y坐标</string>
    <string name="navi_zpoint">R坐标</string>
    <string name="get_navi_point">获取坐标点</string>
    <string name="add_navi_point">导航点</string>
    <string name="add_yingbin_point">迎宾点</string>
    <string name="add_guide">一键导引</string>
    <string name="navi_upload_map">上传地图</string>
    <string name="plz_input_x_point">请填写导航点X坐标</string>
    <string name="plz_input_y_point">请填写导航点Y坐标</string>
    <string name="plz_input_z_point">请填写导航点Z坐标</string>
    <string name="is_delete_navi_data">是否删除该条导航数据？</string>
    <string name="plz_choose_guide_data">请选择一键引导数据</string>
    <string name="no_navi_data_delete">没有可以删除的导航点数据了！</string>
    <string name="plz_choose_navi_data">请选择您要删除的导航点数据！</string>
    <string name="hello_welcome">您好,欢迎光临</string>
    <string name="hello">您好</string>
    <string name="welcome">欢迎光临</string>
    <string name="member_register_speak_text">您好,请对准摄像框拍照进行会员注册。</string>
    <string name="retake_photo_speak_text">图片拍摄有问题哦!请重新拍照！</string>
    <string name="input_name">请输入姓名</string>
    <string name="register_success_speak_text">恭喜您注册成功!</string>
    <string name="register_faild_speak_text">注册失败,请重新注册!</string>
    <string name="member_center">会员中心</string>
    <string name="complete">完成</string>
    <string name="retake_photo">重新拍照</string>
    <string name="name">姓名:</string>
    <string name="gender">性别:</string>
    <string name="man">男</string>
    <string name="woman">女</string>
    <string name="your_city">所在城市:</string>
    <string name="input_city">请输入所在城市</string>
    <string name="address">详细地址:</string>
    <string name="input_address">请输入详细地址</string>
    <string name="clear_location">清除定位</string>
    <string name="android_key_manager">安卓按键管理</string>
    <string name="permanent_hidden_toolbar_switch_settings">永久隐藏工具栏开关设置</string>
    <string name="auto_back_prompt">进入设置之后,20秒自动返回此页面</string>
    <string name="version_type">版型</string>
    <string name="season">季节</string>
    <string name="price_range">价格区间(RMB)</string>
    <string name="min_price">最低价</string>
    <string name="max_price">最高价</string>
    <string name="reset">重置</string>
</resources>