<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/GlobalChildBackgroundImage"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/layout_global_title" />

    <LinearLayout
        android:layout_width="@dimen/dm_1520dp"
        android:layout_height="@dimen/dm_650dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dm_150dp"
        android:background="@drawable/bg_set"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/your_city"
                android:textSize="@dimen/dm_22sp"
                android:textColor="@color/black"
                />
            <EditText
                android:id="@+id/et_city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/input_city"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address"
                android:textSize="@dimen/dm_22sp"
                android:textColor="@color/black"
                />
            <EditText
                android:id="@+id/et_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/input_address"
                />
            <Button
                android:id="@+id/bt_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/check"
                android:textSize="@dimen/dm_22sp"
                android:textColor="@color/white"
                android:background="@color/deepskyblue"
                />
        </LinearLayout>



        <com.baidu.mapapi.map.TextureMapView
            android:id="@+id/texture_mapview"
            android:layout_width="@dimen/dm_800dp"
            android:layout_height="@dimen/dm_400dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <Button
                android:id="@+id/bt_save"
                android:layout_width="@dimen/dm_150dp"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:textSize="@dimen/dm_24sp"
                android:textColor="@color/white"
                android:background="@color/deepskyblue"
                android:layout_margin="@dimen/dm_20dp"
                />

            <Button
                android:id="@+id/bt_clear"
                android:layout_width="@dimen/dm_150dp"
                android:layout_height="wrap_content"
                android:text="@string/clear_location"
                android:textSize="@dimen/dm_24sp"
                android:textColor="@color/white"
                android:background="@color/deepskyblue"
                android:layout_margin="@dimen/dm_20dp"
                />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>