<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/dm_10dp"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left|center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dm_20dp"
            android:layout_marginRight="@dimen/dm_20dp"
            android:layout_marginTop="@dimen/dm_10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/current_pwd"
                android:textSize="26dp" />

            <EditText
                android:layout_marginLeft="@dimen/dm_20dp"
                android:id="@+id/now_pwd"
                style="@style/setting_edit"
                android:layout_width="@dimen/dm_400dp"
                android:layout_height="match_parent"
                android:hint="@string/enter_old_pwd"
                android:inputType="textPassword" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dm_20dp"
            android:layout_marginRight="@dimen/dm_20dp"
            android:layout_marginTop="@dimen/dm_20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/new_pwd"
                android:textSize="@dimen/dm_26dp" />

            <EditText
                android:layout_marginLeft="@dimen/dm_20dp"
                android:hint="@string/enter_new_pwd"
                android:inputType="textPassword"
                android:id="@+id/new_pwd"
                style="@style/setting_edit"
                android:layout_width="@dimen/dm_400dp"
                android:layout_height="match_parent"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dm_20dp"
            android:layout_marginRight="@dimen/dm_20dp"
            android:layout_marginTop="@dimen/dm_20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/repeat_pwd"
                android:textSize="@dimen/dm_26dp" />

            <EditText
                android:hint="@string/enter_repeat_pwd"
                android:inputType="textPassword"
                android:id="@+id/repeat_pwd"
                style="@style/setting_edit"
                android:layout_marginLeft="@dimen/dm_20dp"
                android:layout_width="@dimen/dm_400dp"
                android:layout_height="match_parent"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/show_error"
            style="@style/promt_btn_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dm_10dp"
            android:gravity="center"
            android:text="@string/new_pwd_error"
            android:visibility="gone" />

        <Button
            android:id="@+id/save_pwd"
            style="@style/setting_btn_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dm_10dp"
            android:stateListAnimator="@anim/button_press"
            android:text="@string/save"
            android:textAllCaps="false" />
    </LinearLayout>
</LinearLayout>