<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/GlobalChildBackgroundImage"
    >

    <EditText
        android:id="@+id/et_name"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:hint="@string/save_current_place_man"
        />

    <Button
        android:stateListAnimator="@anim/button_press"
        android:layout_below="@+id/et_name"
        android:id="@+id/bt_save"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/save_current_navigation_point"
        android:layout_centerHorizontal="true"
        />

    <Button
        android:stateListAnimator="@anim/button_press"
        android:id="@+id/bt_go_config_map"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/navigation_point_configure_map"
        android:layout_below="@+id/bt_save"
        android:layout_centerHorizontal="true"
        />

</RelativeLayout>
