<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F4F4F4"
        android:orientation="vertical"
        android:padding="@dimen/dm_20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/version_type"
            android:textColor="#393939"
            android:textSize="@dimen/dm_19sp"
            android:visibility="gone" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_version_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dm_15dp"
            android:scrollbars="none"
            android:visibility="gone">

        </android.support.v7.widget.RecyclerView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/season"
            android:textColor="#393939"
            android:textSize="@dimen/dm_19sp" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_season"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dm_15dp"
            android:scrollbars="none">

        </android.support.v7.widget.RecyclerView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price_range"
            android:textColor="#393939"
            android:textSize="@dimen/dm_19sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dm_15dp">

            <EditText
                android:id="@+id/et_min_price"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:hint="@string/min_price"
                android:inputType="number|numberDecimal"
                android:singleLine="true"
                android:textColor="#393939"
                android:textColorHint="#c9c9c9" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="@dimen/dp_10"
                android:layout_marginStart="@dimen/dp_10"
                android:text="——" />

            <EditText
                android:id="@+id/et_max_price"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:hint="@string/max_price"
                android:inputType="number|numberDecimal"
                android:singleLine="true"
                android:textColor="#393939"
                android:textColorHint="#c9c9c9" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_reset"
                android:layout_width="200dp"
                android:layout_height="70dp"
                android:layout_marginEnd="@dimen/dp_40"
                android:background="#D7D3D1"
                android:text="@string/reset"
                android:textColor="#393939"
                android:textSize="@dimen/dm_20sp" />

            <Button
                android:id="@+id/btn_sure"
                android:layout_width="200dp"
                android:layout_height="70dp"
                android:layout_marginStart="@dimen/dp_40"
                android:background="#cb987d"
                android:text="@string/sure"
                android:textColor="#ffffff"
                android:textSize="@dimen/dm_20sp" />
        </LinearLayout>

    </LinearLayout>


</LinearLayout>