<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">
        <EditText
            android:id="@+id/et_name"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/enter_name"
            android:layout_margin="20dp"
            />

        <EditText
            android:id="@+id/et_phone_num"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/tel_number"
            android:layout_margin="20dp"
            android:maxLength="11"
            android:inputType="number"/>

        <Button
            android:stateListAnimator="@anim/button_press"
            android:id="@+id/bt_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textSize="24sp"
            android:padding="10dp"
            android:layout_margin="30dp"
            />
    </LinearLayout>



</RelativeLayout>
